# quantitative-db

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.org  back_populate_tables.pptx  comparison_results.json  export_tables_to_csv.py  ingest-tab-from-file_v2.ipynb  ingest-tab-from-penn_v1.ipynb  ingest.ipynb  ingest_to_csv.py  oauth.ipynb  out.py  pipeline-old.sh  pipeline.sh  pyproject.toml  pytest.ini  quantdb_research_findings.md
.github/workflows/: blue.yml
data/: CadaverVNMorphology_OutputMetrics.csv
data-curation/: CadaverVNMorphology_OutputMetrics.ipynb
docs/: api.org  f006_implementation_summary.md  ingest.graphml  queries.org  setup.org  table_population_guide.md  table_population_synopsis.md
ingestion/: README.md  README_refactored.md  __init__.py  db2csv.py  f006.py  f006_csv.py  f006_csv_with_export.py  f006_data_extraction.py  f006_database_ingestion.py  f006_ingest.py  f006_ingestion_aligned.py  f006_interlex_mappings.yaml  f006_updated.py  f006_with_export.py  generic_study_ingest.py  generic_study_template.py  run_f006_pipeline.py  study_template_mappings.yaml  test_f006_structure.py  utils.py
ingestion/data/: f006_csv_template.csv  f006_path_metadata.json
ingestion/deprecated/: README.md  f006.py  f006_csv.py  f006_csv_with_export.py  f006_ingestion_aligned.py  f006_updated.py  f006_with_export.py
quantdb/: api.py  api_server.py  auth-config.py  automap_client.py  client.py  compare_exports.py  config.py  exceptions.py  extract_schema.py  generic_ingest.py  ingest.py  ingest_local.py  ingest_pretty.py  main.py  models.py  models_backup_2025_08_26.py  pennsieve_client.py  router.py  server.py  test_extract_relationships.py  utils.py
quantdb/deprecated/: client.py  compare_exports.py  extract_schema.py  ingest_local.py  ingest_pretty.py  models.py  models_backup_2025_08_26.py  models_backup_2025_08_26_14_45_28.py  test_extract_relationships.py
resources/: schemaspy.ini.example
sql/: database.sql  inserts.sql  permissions.sql  postgres.sql  schemas.sql  tables.sql  test.sql  test_database.sql
test/: README.md  conftest.py  pytest.ini  test_api.py  test_back_populate_simple.py  test_back_populate_tables.py  test_database_setup.py  test_f006_analysis.py  test_f006_csv_download.py  test_f006_database_comparison.py  test_f006_id_fix.py  test_f006_id_matching.py  test_f006_id_matching_simple.py  test_f006_implementation.py  test_f006_new_pattern.py  test_f006_simple_comparison.py  test_f006_structure.py  test_generic_ingest.py  test_ingest_functions.py  test_ingest_pattern.py  test_new_ingest_pattern.py  test_pennsieve_download.py
tests/: test_generic_ingest.py
(+34 files in other folders)
