[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "sqlalchemy ~= 2.0.29",
    "pydantic ~= 1.10",
    "fastapi ~= 0.110.1",
    "uvicorn ~= 0.29.0",
    "flask ~= 3.0.3",
    "Flask-SQLAlchemy ~= 3.1.1",
    "orthauth ~= 0.0.18",
    "cython",
    "psycopg2-binary",
    "python-jose ~= 3.3.0",
    "passlib >= 1",
    "python-multipart ~= 0.0.9",
    "bcrypt >= 3, < 4",
]
name = "quantdb"
version = "0.1.0"
description = "Quantitative DB"
readme = "README.md"
packages = [{ include = "quantdb" }]
requires-python = ">=3.10"

# [project.scripts]
# quantdb-fastapi = "uvicorn quantdb.main:app --reload"

[project.optional-dependencies]
dev = ["pytest ~= 8.1.1", "pre-commit ~= 3.7.0"]
